Updated the web app name

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Yamah",
-  "name": "Yamah courses website",
+  "short_name": "Namah",
+  "name": "Namah courses website",
   "icons": [
     {
       "src": "favicon.ico",
