Update for repo changes

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://pepeyen.github.io/big-bang-web",
-  "name": "big-bang-web",
+  "homepage": "http://pepeyen.github.io/namah-front-end",
+  "name": "namah-front-end",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
