Changed homepage from http to https

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://pepeyen.github.io/namah-front-end",
+  "homepage": "https://pepeyen.github.io/namah-front-end",
   "name": "namah-front-end",
   "version": "0.1.0",
   "private": true,
