--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "homepage": "https://pepeyen.github.io/namah-front-end",
-  "name": "namah-front-end",
-  "version": "0.1.0",
+  "homepage": "https://pepeyen.github.io/namah",
+  "name": "namah",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
